--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -18,3 +18,4 @@ jobs:
           echo "Environment: ${{ inputs.env }}"
           echo "Environment: ${{ secrets.TOKEN }}"
           echo "ORG_SECRET: ${{ secrets.ORG_SECRET }}"
+          echo "REPO_SECRET: ${{ secrets.REPO_SECRET }}"
