--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -20,4 +20,4 @@ jobs:
           echo "ORG_SECRET: ${{ secrets.ORG_SECRET }}"
           echo "REPO_SECRET: ${{ secrets.REPO_SECRET }}"
       - name: call composite
-        uses: testorger/public_call_workflows/.github/workflows/call.yml@main
+        uses: testorger/public_call_workflows/.github/actions/sample-composite@main
