--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -22,6 +22,9 @@ jobs:
           echo "secrets.JSON: ${{ secrets.JSON }}"
           echo "ORG_SECRET: ${{ secrets.ORG_SECRET }}"
           echo "REPO_SECRET: ${{ secrets.REPO_SECRET }}"
+          JSON = '${{ secrets.JSON }}'
+          JSON_PARSE = $(echo "$JSON" | jq '. | length')
+          echo "JSON_PARSE: $JSON_PARSE"
       - name: call composite
         uses: testorger/public_reusable_workflows/.github/actions/sample-composite@main
         with:
