--- a/.github/actions/sample-composite/action.yml
+++ b/.github/actions/sample-composite/action.yml
@@ -11,3 +11,19 @@ runs:
       run: |
         echo "hello composite"
         echo "parameter1: ${{ inputs.parameter1 }}"
+    - name: test json
+      shell: bash
+      run: |
+        ENV_JSON='${{ inputs.parameter1 }}'
+        if[ -n "$ENV_JSON" ] && [ "$ENV_JSON" != "[]"]; then
+          ENV_COUNT=$(echo "$ENV_JSON" | jq '. | length')
+
+          for ((i=0; i<$ENV_COUNT; i++)); do
+            ENV_NAME=$(echo "$ENV_JSON" | jq -r ".[$i].name)
+            ENV_VALUE=$(echo "$ENV_JSON" | jq -r ".[$i].value)
+            
+            echo "ENV_NAME: $ENV_NAME"
+            echo "ENV_VALUE: $ENV_VALUE"
+          done
+        fi
+        
